--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -224,11 +224,14 @@ footer {
     
         & > p {
             padding: 0 15px;
-            line-height: 30px;
+            line-height: 25px;
+            font-size: 15px;
         }
     }
 }
 
-@media only screen and (max-width: 767px) {}
+@media only screen and (max-width: 767px) {
+    
+}
 
 @media only screen and (max-width: 480px) {}
