--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -1,75 +1,86 @@
 @import 'variable';
-body{
+
+body {
     direction: rtl;
 }
+
 .topHeader {
     position: relative;
     width: 100%;
     height: 80px;
     background: linear-gradient(-50deg, $bg-color1, $bg-color2);
     text-align: center;
-    box-shadow: 0px 3px 6px 1px rgba(0,0,0,.4);
-    z-index:20;
+    box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, .4);
+    z-index: 20;
+
     .holder {
         width: 1280px;
         margin: 0 auto;
+
         nav {
             float: right;
             width: 800px;
             height: 80px;
-            margin-right:25px ;
-            overflow: hidden;
+            margin-right: 25px;
             position: relative;
+
             input {
                 display: none;
             }
+
             .icon {
                 display: none;
+                transition: .5s;
+
             }
+
             .menu {
                 position: absolute;
                 top: 50%;
                 left: 0;
                 right: 0;
                 transform: translateY(-50%);
+
                 .item {
-                    color:#FFF;
+                    color: #FFF;
                     float: right;
                     padding: 5px 20px;
-                    margin:0 5px;
-                    border-bottom: 0px solid rgba(255,255,255,0);
-                    transition:.6s;
+                    margin: 0 5px;
+                    border-bottom: 0px solid rgba(255, 255, 255, 0);
+                    transition: .6s;
                     font-family: $font;
                     cursor: pointer;
+
                     &:not(.sel):hover {
                         border-bottom: 1px solid #FFF;
-                        transition:.5s;
+                        transition: .5s;
                     }
                 }
-                .sel{
+
+                .sel {
                     border-bottom: 2px solid #FFF;
                 }
             }
         }
-        .icon {
+
+        &>.icon {
             float: left;
-            width:300px;
+            width: 300px;
             line-height: 80px;
-            margin-left:25px ;
-            color:rgb(92,167,80);
-            font-size:30px;
+            margin-left: 25px;
+            color: rgb(92, 167, 80);
+            font-size: 30px;
             height: 80px;
-            background: url("../img/icon/Untitled-10.png" ) no-repeat 0 50%;
+            background: url("../img/icon/Untitled-10.png") no-repeat 0 50%;
             background-size: 110px;
             font-family: "Comic Sans MS";
         }
     }
 }
 
-@media  only screen and (min-width: 1280px) {
-    
-}
-@media  only screen and (max-width: 1280px) {
+@media only screen and (min-width: 1280px) {}
+
+@media only screen and (max-width: 1280px) {
     .topHeader {
         height: 70px;
 
@@ -79,20 +90,21 @@ body{
             nav {
                 width: 600px;
                 height: 70px;
-                margin-right:25px ;
+                margin-right: 25px;
+
                 .menu {
                     .item {
                         padding: 5px 15px;
-                        margin:0 5px;
+                        margin: 0 5px;
                     }
                 }
             }
 
-            .icon {
-                width:250px;
+            &>.icon {
+                width: 250px;
                 line-height: 70px;
-                margin-left:15px ;
-                font-size:25px;
+                margin-left: 15px;
+                font-size: 25px;
                 height: 70px;
                 background-size: 90px;
             }
@@ -100,7 +112,8 @@ body{
     }
 
 }
-@media  only screen and (max-width: 960px) {
+
+@media only screen and (max-width: 960px) {
     .topHeader {
         height: 65px;
 
@@ -110,30 +123,160 @@ body{
             nav {
                 width: 450px;
                 height: 65px;
-                margin-right:20px ;
+                margin-right: 20px;
+
                 .menu {
                     .item {
                         padding: 5px 8px;
-                        margin:0 2px;
+                        margin: 0 2px;
                         font-size: 15px;
                     }
                 }
             }
 
-            .icon {
-                width:230px;
+            &>.icon {
+                width: 230px;
                 line-height: 65px;
-                margin-left:15px ;
-                font-size:20px;
+                margin-left: 15px;
+                font-size: 20px;
                 height: 65px;
                 background-size: 80px;
             }
         }
     }
 }
-@media  only screen and (max-width: 767px) {
 
-}
-@media  only screen and (max-width: 480px) {
+@media only screen and (max-width: 767px) {
+    .topHeader {
+        height: 60px;
+        position: relative;
 
+        .holder {
+            width: 100%;
+
+            nav {
+                float: right;
+                width: 70px;
+                height: 60px;
+                margin-right: 10px;
+                position: relative;
+
+                input {
+                    &:checked~.menu {
+                        right: -10px;
+                    }
+
+                    &:checked~.icon {
+                        transform: translate(-100px,0);
+                        transition: .5s .03s;
+
+                        .line {
+                            background: gray;
+                        }
+                        .line:nth-child(3) {
+                            opacity: 0;
+                            visibility: hidden;
+                            transform: translate(-215px, -10px) rotate(810deg);
+                            transition: 1s;
+                        }
+    
+                        .line:nth-child(1) {
+                            transform:translate(0px , 11px) rotate(405deg) ;
+                        }
+    
+                        .line:nth-child(2) {
+                            transform: rotate(-405deg);
+                        }
+                    }
+
+                }
+
+                .icon {
+
+                    display: block;
+                    z-index: 40;
+                    position: absolute;
+                    height: 40px;
+                    width: 40px;
+                    top: 10px;
+                    right: 10px;
+                    text-align: center;
+
+                    .line {
+                        transition: 0.5s;
+                        z-index: 20;
+                        margin: 7px auto;
+                        width: 80%;
+                        height: 4px;
+                        background: $txtColorOnBg;
+                        border-radius: 3px;
+                    }
+
+                    
+
+                    label {
+                        z-index: 50;
+                        display: inline-block;
+                        position: absolute;
+                        height: 100%;
+                        width: 100%;
+                        top: 0;
+                        right: 0;
+                    }
+                }
+
+                .menu {
+
+                    z-index: 30;
+                    transition: 0.5s;
+                    position: absolute;
+                    height: auto;
+                    overflow: hidden;
+                    width: 170px;
+                    border-radius: 5px;
+                    top: 143px;
+                    padding-top: 50px;
+                    padding-bottom: 25px;
+                    right: -180px;
+                    box-shadow: 2px 2px 15px 1px rgba(190, 190, 190, 0.4);
+                    background: #fff;
+
+
+
+                    .item {
+                        color: $txtColor2;
+                        float: none;
+                        padding: 15px 2px;
+                        margin: 0 0px;
+                        transition: .6s;
+                        font-family: $font;
+                        font-size: 12px;
+                        cursor: pointer;
+                        border-radius: 10px;
+
+                        &:not(.sel):hover {
+                            border: 0;
+                            transition: .5s;
+                        }
+                    }
+
+                    .sel {
+                        border-bottom: 2px solid $bg-color2;
+                        background: linear-gradient(#fff 60%, $bg-color1);
+
+                    }
+                }
+            }
+
+            &>.icon {
+                text-align: right;
+                width: 100px;
+                line-height: 60px;
+                margin-left: 10px;
+                font-size: 15px;
+                height: 60px;
+                background-size: 60px;
+            }
+        }
+    }
 }
