--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -13,7 +13,7 @@ body {
 }
 
 .topHeader {
-  position: relative;
+  position: fixed;
   width: 100%;
   height: 80px;
   background: linear-gradient(-50deg, #34E89E, #0F3443);
@@ -146,7 +146,7 @@ body {
 @media only screen and (max-width: 767px) {
   .topHeader {
     height: 60px;
-    position: relative;
+    position: fixed;
   }
   .topHeader .holder {
     width: 100%;
