--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -5,7 +5,7 @@ body {
 }
 
 .topHeader {
-    position: relative;
+    position: fixed;
     width: 100%;
     height: 80px;
     background: linear-gradient(-50deg, $bg-color1, $bg-color2);
@@ -149,7 +149,7 @@ body {
 @media only screen and (max-width: 767px) {
     .topHeader {
         height: 60px;
-        position: relative;
+        position: fixed;
 
         .holder {
             width: 100%;
