--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -9,9 +9,8 @@
 }
 
 .box1 {
-  padding-top: 80px;
   width: 100%;
-  height: auto;
+  height: 100vh;
   background: url("../img/iphonex.png") no-repeat 50% 210px, linear-gradient(-50deg, #34E89E, #0F3443);
   background-size: 400px, 100%;
   text-align: center;
@@ -26,7 +25,7 @@
 
 .box1 .holder .appBox {
   position: absolute;
-  top: 20px;
+  top: 100px;
   left: 30px;
   padding: 0 20px;
   display: inline-block;
@@ -56,7 +55,7 @@
   font-size: 50px;
   color: #FFF;
   position: relative;
-  top: 60px;
+  top: 140px;
 }
 
 .description {
@@ -232,7 +231,7 @@
   .box1 .holder .slogan {
     font-size: 45px;
     color: #FFF;
-    top: 70px;
+    top: 140px;
   }
   .description {
     width: 960px;
@@ -331,7 +330,7 @@
   .box1 .holder .slogan {
     font-size: 35px;
     color: #FFF;
-    top: 60px;
+    top: 120px;
   }
   .description {
     width: 767px;
@@ -392,6 +391,82 @@
     margin-right: 0;
     font-family: Irsans;
     font-size: 23px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .box1 {
+    background: url("../img/iphonex.png") no-repeat 50% 220px, linear-gradient(-50deg, #34E89E, #0F3443);
+    background-size: 60%, 100%;
+  }
+  .box1 .holder {
+    width: 100%;
+    height: 370px;
+  }
+  .box1 .holder .appBox {
+    display: none;
+  }
+  .box1 .holder .slogan {
+    font-size: 35px;
+    color: #FFF;
+    text-align: center;
+    top: 150px;
+  }
+  .description {
+    width: 480px;
+  }
+  .description article {
+    width: 260px;
+    padding: 20px 10px;
+  }
+  .description article header {
+    font-size: 20px;
+    padding: 20px 0;
+  }
+  .description article p {
+    padding: 20px 0;
+    line-height: 30px;
+    font-size: 13px;
+  }
+  .description .mobileScreen {
+    height: 480px;
+    width: 160px;
+  }
+  .description .mobileScreen .mobile {
+    background-size: 170px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .box1 {
+    background-size: 80%, 100%;
+  }
+  .box1 .holder .slogan {
+    font-size: 30px;
+  }
+  .description {
+    width: 100%;
+  }
+  .description article {
+    width: 59.5%;
+    padding: 20px 0;
+    line-height: 30px;
+  }
+  .description article header {
+    font-size: 18px;
+    padding: 20px 10px;
+  }
+  .description article p {
+    padding: 10px 10px;
+    font-size: 13px;
+    line-height: 25px;
+  }
+  .description .mobileScreen {
+    height: 440px;
+    width: 39.5%;
+  }
+  .description .mobileScreen .mobile {
+    background-size: 110%;
   }
 }
 /*# sourceMappingURL=content.css.map */
