--- a/assets/styles/content.scss
+++ b/assets/styles/content.scss
@@ -2,9 +2,9 @@
 
 
 .box1 {
-    padding-top: 80px;
+    //padding-top: 80px;
     width: 100%;
-    height: auto;
+    height: 100vh;
     background: url("../img/iphonex.png") no-repeat 50% 210px, linear-gradient(-50deg, $bg-color1, $bg-color2);
     background-size: 400px, 100%;
     text-align: center;
@@ -17,7 +17,7 @@
 
         .appBox {
             position: absolute;
-            top: 20px;
+            top: 100px;
             left: 30px;
             padding: 0 20px;
             display: inline-block;
@@ -43,7 +43,7 @@
             font-size: 50px;
             color: $txtColorOnBg;
             position: relative;
-            top: 60px;
+            top: 140px;
 
         }
     }
@@ -229,7 +229,7 @@
             .slogan {
                 font-size: 45px;
                 color: $txtColorOnBg;
-                top: 70px;
+                top: 140px;
     
             }
         }
@@ -349,6 +349,7 @@
 
 @media only screen and (max-width: 960px) {
     .box1 {
+        
         background: url("../img/iphonex.png") no-repeat 50% 180px, linear-gradient(-50deg, $bg-color1, $bg-color2);
         background-size: 330px, 100%;
         .holder {
@@ -358,7 +359,7 @@
             .slogan {
                 font-size: 35px;
                 color: $txtColorOnBg;
-                top: 60px;
+                top: 120px;
     
             }
         }
@@ -445,6 +446,101 @@
     }
 }
 
-@media only screen and (max-width: 767px) {}
+@media only screen and (max-width: 767px) {
+    .box1 {
+        
+        background: url("../img/iphonex.png") no-repeat 50% 220px, linear-gradient(-50deg, $bg-color1, $bg-color2);
+        background-size: 60%, 100%;
+        .holder {
+            width: 100%;
+            height: 370px;
 
-@media only screen and (max-width: 480px) {}
+            .appBox {
+                display: none;
+            }
+            .slogan {
+                font-size: 35px;
+                color: $txtColorOnBg;
+                text-align: center;
+
+                top: 150px;
+    
+            }
+        }
+    }
+
+    .description {
+        width: 480px;
+    
+        article {
+            width: 260px;
+            padding: 20px 10px;
+    
+            header {
+                font-size: 20px;
+                padding: 20px 0;
+            }
+    
+            p {
+                padding: 20px 0;
+                line-height: 30px;
+                font-size: 13px;
+            }
+    
+        }
+    
+        .mobileScreen {
+            height: 480px;
+            width: 160px;
+    
+            .mobile {
+                background-size: 170px;
+            }
+        }
+    }
+
+    
+}
+
+@media only screen and (max-width: 480px) {
+    .box1 {
+        background-size: 80%, 100%;
+        .holder {
+            .slogan {
+                font-size: 30px;
+            }
+        }
+    }
+
+    .description {
+        width: 100%;
+    
+        article {
+            width: 59.5%;
+            padding: 20px 0;
+            line-height: 30px;
+    
+            header {
+                font-size: 18px;
+                padding: 20px 10px;
+            }
+    
+            p {
+                padding: 10px 10px;
+                font-size: 13px;
+                line-height: 25px;
+            }
+    
+        }
+    
+        .mobileScreen {
+            height: 440px;
+            width: 39.5%;
+    
+            .mobile {
+                background-size: 110%;
+            }
+        }
+    }
+
+}
