--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -8,6 +8,10 @@
   src: url("../fonts/MobileFontsnum/IRANSansMobile(FaNum).ttf");
 }
 
+p {
+  text-justify: inter-word;
+}
+
 .box1 {
   width: 100%;
   height: 100vh;
@@ -83,6 +87,8 @@
   line-height: 40px;
   padding: 40px 0;
   color: #666;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .description .mobileScreen {
@@ -207,6 +213,8 @@
   color: #666;
   font-size: 18px;
   line-height: 25px;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .contactUs .holder span {
@@ -218,6 +226,13 @@
   margin-right: 0;
   font-family: Irsans;
   font-size: 23px;
+}
+
+.contactUs .holder span .line {
+  background: #999;
+  height: 1px;
+  width: 200px;
+  margin: 5px auto;
 }
 
 @media only screen and (max-width: 1280px) {
@@ -306,7 +321,7 @@
   .contactUs .holder > p {
     padding: 10px;
     font-size: 15px;
-    line-height: 20px;
+    line-height: 25px;
   }
   .contactUs .holder span {
     font-size: 20px;
