--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -5,14 +5,15 @@ footer {
     background: linear-gradient(-50deg, $bg-color1, $bg-color2);
     margin-top: 40px;
     padding-top: 60px;
-    box-shadow: 0 -3px 6px 1px rgba(0,0,0,.4);
+    box-shadow: 0 -3px 6px 1px rgba(0, 0, 0, .4);
 
     .holder {
         width: 1280px;
-        //height: 220px;
+        overflow: hidden;
+
         margin: 0 auto;
 
-        .right{
+        .right {
             width: 530px;
             height: 80px;
             padding: 50px;
@@ -33,6 +34,7 @@ footer {
                 height: 40px;
                 width: 40px;
                 margin: 15px 3px;
+
                 div {
                     width: 100%;
                     height: 100%;
@@ -40,28 +42,28 @@ footer {
 
                 .telegram {
                     background: url("../img/telegram/telegram.png") no-repeat 50% 50%;
-                    background-size:70px ;
+                    background-size: 70px;
                 }
-    
+
                 .instagram {
                     background: url("../img/instagram/intagram.png") no-repeat 50% 50%;
-                    background-size:55px ;
+                    background-size: 55px;
                 }
-    
+
                 .twitter {
                     background: url("../img/twitter/twitter2.png") no-repeat 50% 50%;
-                    background-size:55px ;
+                    background-size: 55px;
                 }
             }
 
         }
 
-        .left{
-            width: 550px;
-            height: 100px;
-            padding: 40px;
+        .left {
+            width: 600px;
+            height: 120px;
+            padding: 15px ;
             float: left;
-            border-right:1px solid black  ;
+            border-right: 1px solid black;
 
             .item {
                 margin: 20px 20px;
@@ -85,25 +87,28 @@ footer {
                     width: 40px;
                     padding: 0 10px;
 
-                    
 
-                    
+
+
                 }
+
                 .tel {
                     background: url("../img/phone/3.png") no-repeat 50% 50%;
-                    background-size:40px ;
+                    background-size: 40px;
                 }
+
                 .email {
                     background: url("../img/email/Untitled-3.png") no-repeat 50% 50%;
-                    background-size:55px ;
+                    background-size: 55px;
                 }
 
             }
-            
+
         }
     }
 
-    & > p {
+    &>p {
+        display: inline-block;
         font-family: $font;
         color: $txtColorOnBg;
         padding: 0 25px;
@@ -117,19 +122,19 @@ footer {
     footer {
         .holder {
             width: 960px;
-    
-            .right{
-                width: 380px;
-    
-            }
-    
-            .left{
 
-                width: 390px; 
+            .right {
+                width: 380px;
+
+            }
+
+            .left {
+
+                width: 430px;
             }
         }
-    
-        & > p {
+
+        &>p {
             line-height: 40px;
         }
     }
@@ -139,90 +144,92 @@ footer {
     footer {
         margin-top: 20px;
         padding-top: 40px;
-    
+
         .holder {
             width: 767px;
-    
-            .right{
-                width: 280px;
+
+            .right {
+                width: 340px;
                 height: 40px;
-                padding: 50px;
-    
-    
+                padding: 50px 20px;
+
+
                 header {
                     font-size: 15px;
                     margin: 0 5px;
                 }
-    
+
                 .item {
                     display: inline-block;
                     height: 30px;
                     width: 30px;
                     margin: 15px 3px;
-    
+
                     .telegram {
                         background: url("../img/telegram/telegram.png") no-repeat 50% 50%;
-                        background-size:60px ;
+                        background-size: 60px;
                     }
-        
+
                     .instagram {
                         background: url("../img/instagram/intagram.png") no-repeat 50% 50%;
-                        background-size:45px ;
+                        background-size: 45px;
                     }
-        
+
                     .twitter {
                         background: url("../img/twitter/twitter2.png") no-repeat 50% 50%;
-                        background-size:45px ;
+                        background-size: 45px;
                     }
                 }
-    
+
             }
-    
-            .left{
-                width: 330px;
+
+            .left {
+                width: 340px;
                 height: 100px;
                 padding: 20px;
                 float: left;
-    
+
                 .item {
                     margin: 20px 0px;
                     height: 30px;
                     line-height: 30px;
-    
+
                     span {
                         float: right;
                         padding: 0 2px;
                         height: 30px;
                         color: $txtColorOnBg;
                         font-size: 13px;
-    
+
                     }
-    
+
                     .icon {
                         float: right;
                         height: 30px;
                         width: 30px;
                         padding: 0 10px;
-    
-                        
-    
-                        
+
+
+
+
                     }
+
                     .tel {
                         background: url("../img/phone/3.png") no-repeat 50% 50%;
-                        background-size:30px ;
+                        background-size: 30px;
                     }
+
                     .email {
                         background: url("../img/email/Untitled-3.png") no-repeat 50% 50%;
-                        background-size:45px ;
+                        background-size: 45px;
                     }
-    
+
                 }
-                
+
             }
         }
-    
-        & > p {
+
+        &>p {
             padding: 0 15px;
             line-height: 25px;
             font-size: 15px;
@@ -231,7 +238,107 @@ footer {
 }
 
 @media only screen and (max-width: 767px) {
-    
+    footer {
+        margin-top: 20px;
+        padding-top: 40px;
+
+        .holder {
+            width: 100%;
+            text-align: center;
+            overflow: hidden;
+
+            .right {
+                width: 100%;
+                height: auto;
+                padding: 0px;
+                text-align: center;
+
+
+                header {
+                    text-align: center;
+                    font-size: 15px;
+                    margin: 0 5px;
+                }
+
+                .item {
+                    display: inline-block;
+                    height: 30px;
+                    width: 30px;
+                    margin: 15px 3px;
+
+                    .telegram {
+                        background: url("../img/telegram/telegram.png") no-repeat 50% 50%;
+                        background-size: 60px;
+                    }
+
+                    .instagram {
+                        background: url("../img/instagram/intagram.png") no-repeat 50% 50%;
+                        background-size: 45px;
+                    }
+
+                    .twitter {
+                        background: url("../img/twitter/twitter2.png") no-repeat 50% 50%;
+                        background-size: 45px;
+                    }
+                }
+
+            }
+
+            .left {
+                float: none;
+                border: 0 none;
+                width: auto;
+                height: auto;
+                padding: 0;
+                display: inline-block;
+
+                .item {
+                    width: unset;
+                    margin: 10px auto;
+                    height: 30px;
+                    line-height: 30px;
+
+                    span {
+                        float: right;
+                        padding: 0 2px;
+                        height: 30px;
+                        color: $txtColorOnBg;
+                        font-size: 13px;
+
+                    }
+
+                    .icon {
+                        float: right;
+                        height: 30px;
+                        width: 30px;
+                        padding: 0 10px;
+
+
+
+
+                    }
+
+                    .tel {
+                        background: url("../img/phone/3.png") no-repeat 50% 50%;
+                        background-size: 30px;
+                    }
+
+                    .email {
+                        background: url("../img/email/Untitled-3.png") no-repeat 50% 50%;
+                        background-size: 45px;
+                    }
+
+                }
+
+            }
+        }
+
+        &>p {
+            padding: 0 15px;
+            line-height: 30px;
+            font-size: 12px;
+        }
+    }
 }
 
 @media only screen and (max-width: 480px) {}
