fonts added to variables

--- a/assets/styles/_variable.scss
+++ b/assets/styles/_variable.scss
@@ -3,12 +3,22 @@
     font-family: Irsans;
     src: url("../fonts/IRANSansWeb/IRANSansWeb\(FaNum\).woff");
 }
-
-
-
-
-
-
+@font-face {
+    font-family: boldIrsans;
+    src: url("../fonts/IRANSansWeb/IRANSansWeb\(FaNum\)_Bold.ttf");
+}
+@font-face {
+    font-family: lightIrsans;
+    src: url("../fonts/IRANSansWeb/IRANSansWeb\(FaNum\)_Light.ttf");
+}
+@font-face {
+    font-family: mediumIrsans;
+    src: url("../fonts/IRANSansWeb/IRANSansWeb\(FaNum\)_Medium.ttf");
+}
+@font-face {
+    font-family: ultraLightIrsans;
+    src: url("../fonts/IRANSansWeb/IRANSansWeb\(FaNum\)_UltraLight.ttf");
+}
 
 @font-face {
     font-family: Irsansmobile;
@@ -16,6 +26,15 @@
 }
 
 $font : Irsans ;
+$boldFont : boldIrsans;
+$lightFont : lightIrsans;
+$mediumFont : mediumIrsans;
+$ultraLightFont : ultraLightIrsans;
+
+$mobileFont : ultraLightIrsans;
+
+
+
 
 $txtColorOnBg:#FFF;
 $txtColor1:#000;
