--- a/assets/styles/footer.scss
+++ b/assets/styles/footer.scss
@@ -24,7 +24,7 @@ footer {
             header {
                 text-align: left;
                 color: $txtColorOnBg;
-                font-family: $font;
+                font-family: $lightFont;
                 font-size: 18px;
                 margin: 0 5px;
             }
@@ -99,7 +99,7 @@ footer {
 
                 .email {
                     background: url("../img/email/Untitled-3.png") no-repeat 50% 50%;
-                    background-size: 55px;
+                    background-size: 40px;
                 }
 
             }
@@ -221,7 +221,7 @@ footer {
 
                     .email {
                         background: url("../img/email/Untitled-3.png") no-repeat 50% 50%;
-                        background-size: 45px;
+                        background-size: 35px;
                     }
 
                 }
@@ -325,7 +325,7 @@ footer {
 
                     .email {
                         background: url("../img/email/Untitled-3.png") no-repeat 50% 50%;
-                        background-size: 45px;
+                        background-size: 30px;
                     }
 
                 }
