--- a/assets/styles/content.css
+++ b/assets/styles/content.css
@@ -102,7 +102,7 @@ p {
 }
 
 .description article p {
-  font-family: Irsans;
+  font-family: lightIrsans;
   font-size: 25px;
   line-height: 40px;
   padding: 40px 0;
@@ -140,7 +140,7 @@ p {
   color: #FFF;
   width: 1280px;
   margin: 0 auto;
-  font-family: Irsans;
+  font-family: boldIrsans;
   font-size: 20px;
 }
 
@@ -175,7 +175,7 @@ p {
 }
 
 .points .holder .item .title {
-  font-family: Irsans;
+  font-family: boldIrsans;
   color: #3F5EAB;
   padding-bottom: 20px;
   font-size: 25px;
